--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^12.8.3",
     "date-fns": "^2.25.0",
     "firebase": "^9.1.3",
-    "node-sass": "^6.0.1",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
+    "sass": "^1.44.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
